[build-system]
requires = [
	 "cython",
	 "oldest-supported-numpy; python_version<'3.9'",
	 "numpy>=2; python_version>='3.9'",
	 "setuptools",
	 "swig",
	 "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = 'pp* *-musllinux* cp36-*'

[tool.cibuildwheel.linux]
archs = ['auto', 'aarch64']
before-all = "yum install -y mesa-libGL-devel"
